produção da estrutura

--- a/index.html
+++ b/index.html
@@ -3,47 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vida de São Carlo Acutis</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <title>São Carlo Acutis</title>
 </head>
 <body>
-    <h1>Conheça mais sobre a vida de São Carlo Acutis!</h1>
+    <header>
+        <h1>Conheça mais sobre a vida de São Carlo Acutis</h1>
+           <nav></nav>
+           <li><a href="#inicio">Inicio</a></li>
+           <li><a href="#biografia">Biografia</a></li>
+           <li><a href="#legado">Legado</a></li>
+           <li><a href="#devoção">Devoção</a></li>
+           <li><a href="#milagres">Milagres</a></li>
+           <li><a href="#fotos">Fotos</a></li>
+   </nav>
+    </header>
+    <div>
     <img src="download (9).jpg" alt="Foto de São Carlo Acutis">
-<nav>
-    <ul>
-        <a href="#biografia">Biografia</a>
-        <a href="#milagres">Milagres</a>
-        <a href="#devocao">Devoção</a>
-        <a href="#milagres-realizados-por-sua-intercessao">Milagres realizados por sua intercessão</a>
-    </ul>
-</nav>
-
-<section id="biografia">
-    <h2>Biografia</h2>
-    <p>Nascido em 3 de maio de 1991, em Londres, na Inglaterra, e seus pais italianos Chamados
-    Andrea Acutis e Antonia Salzano, retornaram à Itália quando ele tinha apenas um ano de idade. Desde jovem, Carlo demonstrou
-    uma profunda fé católica e um amor especial pela Eucaristia. Ele era conhecido por sua
-    habilidade em informática e usou essa habilidade para criar um site que documentava
-    milagres eucarísticos ao redor do mundo. Carlo faleceu em 12 de outubro de 2006, aos 15 anos, devido a uma leucemia fulminante.
-    </p>
-</section>
-
-<section id="milagres">
-    <h2>Milagres</h2>
-    <p>São Carlo Acutis é conhecido por ter realizado diversos milagres, especialmente relacionados à Eucaristia.</p>
-</section>
-
-<section id="devocao">
-    <h2>Devoção</h2>
-    <p>A devoção a São Carlo Acutis tem crescido nos últimos anos, especialmente entre os jovens.
-    Ele é visto como um modelo de santidade na era digital, inspirando muitos a viverem sua fé de maneira autêntica e moderna.
-    </p>
-<section id="milagres-realizados-por-sua-intercessao">
-    <h2>Milagres realizados por sua intercessão</h2>
-    <p>Desde sua beatificação em 2020, vários milagres têm sido atribuídos à intercessão de São Carlo Acutis.
-    Um dos casos mais notáveis envolve a cura de um menino brasileiro que sofria de uma grave doença hepática.
-    </p>
-<section>
-
-</section>
+   <p>Aqui você encontrará informações sobre sua vida, sua fé e seu legado, incluindo detalhes sobre sua devoção à Eucaristia e seu trabalho em prol da evangelização digital. Descubra como ele utilizou a tecnologia para compartilhar sua fé e inspirar outros a fazer o mesmo.</p>
+    
+<h2 id="biografia">Biografia</h2>
+    <p>Carlo Acutis nasceu em 3 de maio de 1991, em Londres, Inglaterra, e faleceu em 12 de outubro de 2006, em Monza, Itália. Desde jovem, Carlo demonstrou uma profunda fé católica e uma paixão pela tecnologia. Ele é conhecido por sua devoção à Eucaristia e por criar um site que documentava milagres eucarísticos ao redor do mundo.</p>
+    <p>Seus pais, Andrea e Antônia Acutis, eram católicos praticantes e incentivaram a fé de Carlo desde cedo. Ele cresceu em uma família amorosa e unida, que valorizava a educação e a espiritualidade.</p>
+    <p>Carlo era um estudante brilhante e dedicava seu tempo livre a atividades relacionadas à informática e à programação. Ele usou suas habilidades para criar um site que catalogava milagres eucarísticos, com o objetivo de ajudar as pessoas a aprofundarem sua fé e a conhecerem melhor a presença real de Cristo na Eucaristia.</p>
+    <p>Além de sua devoção à Eucaristia, Carlo também era conhecido por sua bondade e generosidade. Ele ajudava os necessitados, visitava doentes e se dedicava a obras de caridade. Sua vida foi marcada por um profundo amor a Deus e ao próximo.</p>
+    <p>Ele esteve sua vida inteira dedicado a ajudar os outros e a promover a fé católica, mesmo em face de sua doença. Sua coragem e fé inabalável o tornaram um exemplo para muitos.</p>
+    <p>As pessoas mais importantes em sua vida foram seus pais, que sempre o apoiaram em sua jornada espiritual, e seus amigos, que compartilharam com ele momentos de fé e alegria, incluido em suas amizades, tambem temos o Rajesh Mohur, que trabalhava para a família e foi convertido ao catolicismo pela fé do jovem.  </p>
+    <h2 id="legado">Legado</h2>
+    <h3>Legado de Carlo Acutis</h3>
+    <p>O legado de Carlo Acutis transcende sua breve vida terrena (1991–2006) e continua a ressoar de maneira poderosa no século XXI. Mesmo tendo vivido apenas 15 anos, ele deixou marcas profundas na Igreja Católica e entre fiéis de todas as idades, tornando-se uma referência para jovens, educadores, famílias e líderes religiosos. Seu exemplo mostra que a santidade não está distante ou reservada a poucos escolhidos, mas é possível a todos que buscam viver a fé com autenticidade e amor.</p>
+</div>
 </body>
 </html>
